# CuteTales

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: codeberg-mirror.yml
assets/: licenses.html  licenses.qrc
assets/icons/: icon.icns  windows_icon.qrc  windows_icon.rc
assets/themes/breeze/dark/: stylesheet.qss  stylesheet_mine.qss
assets/themes/breeze/light/: stylesheet.qss
assets/themes/system/: stylesheet.qss  systemStyleSheet.qrc
ci/linux/: build-ci.yml  bundleOrTest.sh
ci/macos/: build-ci.yml  bundleOrTest.sh
ci/scripts/: print_coverage.py
ci/windows/: build-ci.yml  bundleOrTest.bat
conan/: install.bat  install.sh
conan/profiles/: linux-x86_64-AppImage  mac-arm  mac-arm-to-mac-x86_64  windows_vs
deploy/linux/: org.OverEngineer.CuteTales.desktop
deploy/linux/appimage/: AppRun
deploy/linux/flatpak/: org.OverEngineer.CuteTales.appdata.xml  org.OverEngineer.CuteTales.yml
deploy/macOS/: create_icns.sh
languages/: CuteTales_de_DE.ts
scripts/: build-flatpak-locally.sh
src/: CMakeLists.txt
src/app/: ApplicationManager.h  CMakeLists.txt  Settings.cpp  Settings.h  init.h
src/app/ui/: MainWidget.cpp  MainWidget.h  MainWindow.cpp  MainWindow.h
src/app/ui/dialogs/info/: InfoDialog.cpp  InfoDialog.h
src/app/ui/dialogs/settings/: GeneralSettingsTab.cpp  GeneralSettingsTab.h  SettingsDialog.cpp  SettingsDialog.h  StyleSettingsTab.cpp  StyleSettingsTab.h
src/app/utils/: FilePathUtil.h
src/executable/: CMakeLists.txt  main.cpp
src/test/: CMakeLists.txt
src/test/integration/: CMakeLists.txt
src/test/integration/app/: Settings_ITest.cpp
src/test/unit/: CMakeLists.txt
src/test/unit/app/utils/: FilePathUtil_UTest.cpp
